<?xml version="1.0"?>
<package format="2">
  <name>trajopt_ifopt</name>
  <version>0.1.0</version>
  <description>The trajopt_ifopt package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>
  <author>Matthew Powelson</author>

  <depend>ifopt</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>trajopt</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
