<?xml version="1.0"?>
<package format="2">
  <name>trajopt_ifopt</name>
  <version>0.1.0</version>
  <description>The trajopt_ifopt package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>
  <author>Matthew Powelson</author>

  <!-- Following recommendations of REP 136 -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>eigen</depend>
  <depend>ifopt</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_environment</depend>
  <depend>trajopt_utils</depend>
  <depend>boost</depend>

  <test_depend>gtest</test_depend>
  <test_depend>trajopt</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
