<?xml version="1.0"?>
<package format="2">
  <name>trajopt_moveit_examples</name>
  <version>0.1.0</version>
  <description>This package contains examples related to this trajopt_ros repository using moveit.</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>trajopt_moveit</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
