<?xml version="1.0"?>
<package format="2">
  <name>trajopt_osgviewer</name>
  <version>0.1.0</version>
  <description>The trajopt_osgviewer package</description>
  <maintainer email="larmstrong@todo.todo">larmstrong</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>trajopt_utils</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
