<?xml version="1.0"?>
<package format="2">
  <name>trajopt_sco</name>
  <version>0.1.0</version>
  <description>The trajopt_sco package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <!-- Following recommendations of REP 136 -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libjsoncpp-dev</depend>
  <depend>osqp</depend>
  <depend>trajopt_utils</depend>
  <depend>boost</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
