<?xml version="1.0"?>
<package format="3">
  <name>trajopt_sco</name>
  <version>0.7.0</version>
  <description>The trajopt_sco package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <!-- Following recommendations of REP 136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libjsoncpp-dev</depend>
  <depend>osqp</depend>
  <depend>qpoases</depend>
  <depend>trajopt_common</depend>
  <depend>boost</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
